Remove psycopg2 requirement and start implementing endpoints
#29
